--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "prefer-stable": true,    
     "autoload": {
         "psr-4": {
-            "Ideal\\": "src/"
+            "Ideal\\": "src/Ideal/"
         }
     },
     "extra": {
